@@ -248,6 +248,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 21095) Tracking categories produced by the parser (expensive parser function
   limit exceeded, __NOINDEX__ tracking, etc) can now be disabled by setting the 
   system message ([[MediaWiki:expensive-parserfunction-category]] etc) to "-".
+* Added maintenance script sqlite.php for SQLite-specific maintenance tasks.
 
 === Bug fixes in 1.16 ===
 
